--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^8.4.1",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
